fix navbar dropdown z-index

--- a/client/src/styles/components/NavBar.scss
+++ b/client/src/styles/components/NavBar.scss
@@ -66,6 +66,7 @@
 }
 
 .nav-profile__dropdown {
+  z-index: 3;
   display: flex;
   justify-content: center;
   align-items: center;
